--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.417.0",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.1",
