firebase json edited

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,17 @@
 {
   "hosting": {
     "public": "public",
+    "headers": [
+      {
+        "source": "/logo.png",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
